--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -108,3 +108,7 @@ required = [
 [[constraint]]
   name = "github.com/google/uuid"
   version = "1.1.1"
+
+[[constraint]]
+  name = "volcano.sh/volcano"
+  branch = "master"
