--- a/manifest/crds/sparkoperator.k8s.io_sparkapplications.yaml
+++ b/manifest/crds/sparkoperator.k8s.io_sparkapplications.yaml
@@ -9,9 +9,11 @@ spec:
   group: sparkoperator.k8s.io
   names:
     kind: SparkApplication
+    listKind: SparkApplicationList
     plural: sparkapplications
     shortNames:
     - sparkapp
+    singular: sparkapplication
   scope: Namespaced
   subresources:
     status: {}
@@ -1884,7 +1886,6 @@ spec:
                       type: integer
                   required:
                   - jmxExporterJar
-                  - port
                   type: object
               required:
               - exposeDriverMetrics
@@ -1935,6 +1936,9 @@ spec:
               type: string
             sparkVersion:
               type: string
+            timeToLiveSeconds:
+              format: int64
+              type: integer
             type:
               enum:
               - Java
