Run controller-gen to update CRD definitions (#623)

--- a/manifest/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
+++ b/manifest/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
@@ -48,6 +48,13 @@ spec:
                   type: array
                 batchScheduler:
                   type: string
+                batchSchedulerOptions:
+                  properties:
+                    priorityClassName:
+                      type: string
+                    queue:
+                      type: string
+                  type: object
                 deps:
                   properties:
                     downloadTimeout:
