--- a/manifest/crds/sparkoperator.k8s.io_sparkapplications.yaml
+++ b/manifest/crds/sparkoperator.k8s.io_sparkapplications.yaml
@@ -34,6 +34,13 @@ spec:
               type: array
             batchScheduler:
               type: string
+            batchSchedulerOptions:
+              properties:
+                priorityClassName:
+                  type: string
+                queue:
+                  type: string
+              type: object
             deps:
               properties:
                 downloadTimeout:
