--- a/manifest/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
+++ b/manifest/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
@@ -1903,7 +1903,8 @@ spec:
                           type: string
                         port:
                           format: int32
-                          minimum: 49151
+                          minimum: 1024
+                          maximum: 49151
                           type: integer
                       required:
                       - jmxExporterJar
