--- a/manifest/crds/sparkoperator.k8s.io_sparkapplications.yaml
+++ b/manifest/crds/sparkoperator.k8s.io_sparkapplications.yaml
@@ -1889,7 +1889,8 @@ spec:
                       type: string
                     port:
                       format: int32
-                      minimum: 49151
+                      minimum: 1024
+                      maximum: 49151
                       type: integer
                   required:
                   - jmxExporterJar
