Set podgroup to stable version (#891)
* Set podgroup to stable version

Signed-off-by: Peng Gao <peng.gao.dut@gmail.com>

* Update operator rbac

Signed-off-by: Peng Gao <peng.gao.dut@gmail.com>

--- a/manifest/spark-operator-rbac.yaml
+++ b/manifest/spark-operator-rbac.yaml
@@ -60,6 +60,9 @@ rules:
 - apiGroups: ["sparkoperator.k8s.io"]
   resources: ["sparkapplications", "scheduledsparkapplications", "sparkapplications/status", "scheduledsparkapplications/status"]
   verbs: ["*"]
+- apiGroups: ["scheduling.volcano.sh"]
+  resources: ["podgroups", "queues", "queues/status"]
+  verbs: ["get", "list", "watch", "create", "delete", "update"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
