Made field serviceAccount available for both driver and executors (#924)
Spark 3.0 will support specifying a k8s service account for the executor pods. This CL prepares the operator to support that in the upcoming Spark 3.0.0 release.

--- a/manifest/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
+++ b/manifest/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
@@ -2838,6 +2838,8 @@ spec:
                               type: string
                           type: object
                       type: object
+                    serviceAccount:
+                      type: string
                     sidecars:
                       items:
                         properties:
