--- a/manifest/crds/sparkoperator.k8s.io_sparkapplications.yaml
+++ b/manifest/crds/sparkoperator.k8s.io_sparkapplications.yaml
@@ -2824,6 +2824,8 @@ spec:
                           type: string
                       type: object
                   type: object
+                serviceAccount:
+                  type: string
                 sidecars:
                   items:
                     properties:
