Added support for some config options new in Spark 3.0.0 (#954)

--- a/manifest/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
+++ b/manifest/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
@@ -1030,6 +1030,8 @@ spec:
                       type: array
                     javaOptions:
                       type: string
+                    kubernetesMaster:
+                      type: string
                     labels:
                       additionalProperties:
                         type: string
@@ -1218,6 +1220,10 @@ spec:
                       type: object
                     serviceAccount:
                       type: string
+                    serviceAnnotations:
+                      additionalProperties:
+                        type: string
+                      type: object
                     sidecars:
                       items:
                         properties:
