--- a/examples/spark-pi-prometheus.yaml
+++ b/examples/spark-pi-prometheus.yaml
@@ -22,13 +22,13 @@ metadata:
 spec:
   type: Scala
   mode: cluster
-  image: "gcr.io/spark-operator/spark:v2.4.5-gcs-prometheus"
+  image: "gcr.io/spark-operator/spark:v3.0.0"
   imagePullPolicy: Always
   mainClass: org.apache.spark.examples.SparkPi
-  mainApplicationFile: "local:///opt/spark/examples/jars/spark-examples_2.11-2.4.5.jar"
+  mainApplicationFile: "local:///opt/spark/examples/jars/spark-examples_2.12-3.0.0.jar"
   arguments:
     - "100000"
-  sparkVersion: "2.4.5"
+  sparkVersion: "3.0.0"
   restartPolicy:
     type: Never
   driver:
@@ -36,14 +36,14 @@ spec:
     coreLimit: "1200m"
     memory: "512m"
     labels:
-      version: 2.4.5
+      version: 3.0.0
     serviceAccount: spark
   executor:
     cores: 1
     instances: 1
     memory: "512m"
     labels:
-      version: 2.4.5
+      version: 3.0.0
   monitoring:
     exposeDriverMetrics: true
     exposeExecutorMetrics: true
