--- a/manifest/spark-operator.yaml
+++ b/manifest/spark-operator.yaml
@@ -21,25 +21,25 @@ metadata:
   namespace: spark-operator
   labels:
     app.kubernetes.io/name: sparkoperator
-    app.kubernetes.io/version: v2.4.5-v1beta2
+    app.kubernetes.io/version: v1beta2-1.2.0-3.0.0
 spec:
   replicas: 1
   selector:
     matchLabels:
       app.kubernetes.io/name: sparkoperator
-      app.kubernetes.io/version: v2.4.5-v1beta2
+      app.kubernetes.io/version: v1beta2-1.2.0-3.0.0
   strategy:
     type: Recreate
   template:
     metadata:
       labels:
         app.kubernetes.io/name: sparkoperator
-        app.kubernetes.io/version: v2.4.5-v1beta2
+        app.kubernetes.io/version: v1beta2-1.2.0-3.0.0
     spec:
       serviceAccountName: sparkoperator
       containers:
       - name: sparkoperator
-        image: gcr.io/spark-operator/spark-operator:v2.4.5-v1beta2-latest
+        image: gcr.io/spark-operator/spark-operator:v1beta2-1.2.0-3.0.0
         imagePullPolicy: Always
         args:
         - -logtostderr
