--- a/spark-docker/Dockerfile
+++ b/spark-docker/Dockerfile
@@ -17,17 +17,27 @@
 ARG SPARK_IMAGE=gcr.io/spark-operator/spark:v3.0.0
 FROM ${SPARK_IMAGE}
 
+# Switch to user root so we can add addtional jars and configuration files.
+USER root
+
 # Setup dependencies for Google Cloud Storage access.
 RUN rm $SPARK_HOME/jars/guava-14.0.1.jar
 ADD https://repo1.maven.org/maven2/com/google/guava/guava/23.0/guava-23.0.jar $SPARK_HOME/jars
+RUN chmod 644 $SPARK_HOME/jars/guava-23.0.jar
 # Add the connector jar needed to access Google Cloud Storage using the Hadoop FileSystem API.
 ADD https://storage.googleapis.com/hadoop-lib/gcs/gcs-connector-latest-hadoop2.jar $SPARK_HOME/jars
+RUN chmod 644 $SPARK_HOME/jars/gcs-connector-latest-hadoop2.jar
 ADD https://storage.googleapis.com/spark-lib/bigquery/spark-bigquery-latest.jar $SPARK_HOME/jars
+RUN chmod 644 $SPARK_HOME/jars/spark-bigquery-latest.jar
 
 # Setup for the Prometheus JMX exporter.
-RUN mkdir -p /etc/metrics/conf
 # Add the Prometheus JMX exporter Java agent jar for exposing metrics sent to the JmxSink to Prometheus.
 ADD https://repo1.maven.org/maven2/io/prometheus/jmx/jmx_prometheus_javaagent/0.11.0/jmx_prometheus_javaagent-0.11.0.jar /prometheus/
+RUN chmod 644 /prometheus/jmx_prometheus_javaagent-0.11.0.jar
+
+USER ${spark_uid}
+
+RUN mkdir -p /etc/metrics/conf
 COPY conf/metrics.properties /etc/metrics/conf
 COPY conf/prometheus.yaml /etc/metrics/conf
 
