--- a/manifest/crds/sparkoperator.k8s.io_sparkapplications.yaml
+++ b/manifest/crds/sparkoperator.k8s.io_sparkapplications.yaml
@@ -766,6 +766,7 @@ spec:
                               name:
                                 type: string
                               protocol:
+                                default: TCP
                                 type: string
                             required:
                             - containerPort
@@ -1144,24 +1145,7 @@ spec:
                   podName:
                     pattern: '[a-z0-9]([-a-z0-9]*[a-z0-9])?(\\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*'
                     type: string
-                  schedulerName:
-                    type: string
-                  secrets:
-                    items:
-                      properties:
-                        name:
-                          type: string
-                        path:
-                          type: string
-                        secretType:
-                          type: string
-                      required:
-                      - name
-                      - path
-                      - secretType
-                      type: object
-                    type: array
-                  securityContext:
+                  podSecurityContext:
                     properties:
                       fsGroup:
                         format: int64
@@ -1202,6 +1186,73 @@ spec:
                           - value
                           type: object
                         type: array
+                      windowsOptions:
+                        properties:
+                          gmsaCredentialSpec:
+                            type: string
+                          gmsaCredentialSpecName:
+                            type: string
+                          runAsUserName:
+                            type: string
+                        type: object
+                    type: object
+                  schedulerName:
+                    type: string
+                  secrets:
+                    items:
+                      properties:
+                        name:
+                          type: string
+                        path:
+                          type: string
+                        secretType:
+                          type: string
+                      required:
+                      - name
+                      - path
+                      - secretType
+                      type: object
+                    type: array
+                  securityContext:
+                    properties:
+                      allowPrivilegeEscalation:
+                        type: boolean
+                      capabilities:
+                        properties:
+                          add:
+                            items:
+                              type: string
+                            type: array
+                          drop:
+                            items:
+                              type: string
+                            type: array
+                        type: object
+                      privileged:
+                        type: boolean
+                      procMount:
+                        type: string
+                      readOnlyRootFilesystem:
+                        type: boolean
+                      runAsGroup:
+                        format: int64
+                        type: integer
+                      runAsNonRoot:
+                        type: boolean
+                      runAsUser:
+                        format: int64
+                        type: integer
+                      seLinuxOptions:
+                        properties:
+                          level:
+                            type: string
+                          role:
+                            type: string
+                          type:
+                            type: string
+                          user:
+                            type: string
+                        type: object
                       windowsOptions:
                         properties:
                           gmsaCredentialSpec:
@@ -1498,6 +1549,7 @@ spec:
                               name:
                                 type: string
                               protocol:
+                                default: TCP
                                 type: string
                             required:
                             - containerPort
@@ -2513,6 +2565,7 @@ spec:
                               name:
                                 type: string
                               protocol:
+                                default: TCP
                                 type: string
                             required:
                             - containerPort
@@ -2787,24 +2840,7 @@ spec:
                     additionalProperties:
                       type: string
                     type: object
-                  schedulerName:
-                    type: string
-                  secrets:
-                    items:
-                      properties:
-                        name:
-                          type: string
-                        path:
-                          type: string
-                        secretType:
-                          type: string
-                      required:
-                      - name
-                      - path
-                      - secretType
-                      type: object
-                    type: array
-                  securityContext:
+                  podSecurityContext:
                     properties:
                       fsGroup:
                         format: int64
@@ -2845,6 +2881,73 @@ spec:
                           - value
                           type: object
                         type: array
+                      windowsOptions:
+                        properties:
+                          gmsaCredentialSpec:
+                            type: string
+                          gmsaCredentialSpecName:
+                            type: string
+                          runAsUserName:
+                            type: string
+                        type: object
+                    type: object
+                  schedulerName:
+                    type: string
+                  secrets:
+                    items:
+                      properties:
+                        name:
+                          type: string
+                        path:
+                          type: string
+                        secretType:
+                          type: string
+                      required:
+                      - name
+                      - path
+                      - secretType
+                      type: object
+                    type: array
+                  securityContext:
+                    properties:
+                      allowPrivilegeEscalation:
+                        type: boolean
+                      capabilities:
+                        properties:
+                          add:
+                            items:
+                              type: string
+                            type: array
+                          drop:
+                            items:
+                              type: string
+                            type: array
+                        type: object
+                      privileged:
+                        type: boolean
+                      procMount:
+                        type: string
+                      readOnlyRootFilesystem:
+                        type: boolean
+                      runAsGroup:
+                        format: int64
+                        type: integer
+                      runAsNonRoot:
+                        type: boolean
+                      runAsUser:
+                        format: int64
+                        type: integer
+                      seLinuxOptions:
+                        properties:
+                          level:
+                            type: string
+                          role:
+                            type: string
+                          type:
+                            type: string
+                          user:
+                            type: string
+                        type: object
                       windowsOptions:
                         properties:
                           gmsaCredentialSpec:
@@ -3137,6 +3240,7 @@ spec:
                               name:
                                 type: string
                               protocol:
+                                default: TCP
                                 type: string
                             required:
                             - containerPort
