add proxy user support (#1022)
Signed-off-by: Abhilash Pallerlamudi <stp.abhi@gmail.com>

--- a/manifest/crds/sparkoperator.k8s.io_sparkapplications.yaml
+++ b/manifest/crds/sparkoperator.k8s.io_sparkapplications.yaml
@@ -3599,6 +3599,8 @@ spec:
                 additionalProperties:
                   type: string
                 type: object
+              proxyUser:
+                type: string
               pythonVersion:
                 enum:
                 - "2"
