--- a/manifest/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
+++ b/manifest/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
@@ -3613,6 +3613,8 @@ spec:
                     additionalProperties:
                       type: string
                     type: object
+                  proxyUser:
+                    type: string
                   pythonVersion:
                     enum:
                     - "2"
