Fix crds to add defaults for k8s 1.18+ (#1084)
PR #1045 [1] appears to have accidentally reverted #986 [2] which added
defaults to the protocol field to work with versions of k8s 1.18+

This PR also draws on https://github.com/kudobuilder/operators/pull/297 [3]


[1] https://github.com/GoogleCloudPlatform/spark-on-k8s-operator/pull/1045

[2] https://github.com/GoogleCloudPlatform/spark-on-k8s-operator/pull/986

[3] https://github.com/kudobuilder/operators/pull/297

--- a/manifest/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
+++ b/manifest/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
@@ -795,6 +795,7 @@ spec:
                                   type: string
                               required:
                               - containerPort
+                              - protocol
                               type: object
                             type: array
                             x-kubernetes-list-map-keys:
@@ -1577,6 +1578,7 @@ spec:
                                   type: string
                               required:
                               - containerPort
+                              - protocol
                               type: object
                             type: array
                             x-kubernetes-list-map-keys:
@@ -2592,6 +2594,7 @@ spec:
                                   type: string
                               required:
                               - containerPort
+                              - protocol
                               type: object
                             type: array
                             x-kubernetes-list-map-keys:
@@ -3266,6 +3269,7 @@ spec:
                                   type: string
                               required:
                               - containerPort
+                              - protocol
                               type: object
                             type: array
                             x-kubernetes-list-map-keys:
