--- a/charts/spark-operator-chart/templates/webhook-service.yaml
+++ b/charts/spark-operator-chart/templates/webhook-service.yaml
@@ -1,4 +1,4 @@
-{{ if .Values.enableWebhook }}
+{{ if .Values.webhook.enable }}
 kind: Service
 apiVersion: v1
 metadata:
@@ -8,7 +8,7 @@ metadata:
 spec:
   ports:
   - port: 443
-    targetPort: {{ .Values.webhookPort }}
+    targetPort: {{ .Values.webhook.port }}
     name: webhook
   selector:
     {{- include "spark-operator.selectorLabels" . | nindent 4 }}
