Add Release Name for Chart to GH Action (#1097)
* Add GitHub Action to Release Chart

* Update release name

* Add missing "

* Remove erant typo

* version chart

* Revert "Version chart"

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -53,3 +53,4 @@ jobs:
         uses: helm/chart-releaser-action@v1.1.0
         env:
           CR_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          CR_RELEASE_NAME_TEMPLATE: "spark-operator-chart-{{ .Version }}"
