add hostAliases for SparkPodSpec (#1133)
* add hostAliases for SparkPodSpec and update codegen files

* add webhook patcher for HostAliases + add tests

* update chart CRDs

* update api doc

--- a/charts/spark-operator-chart/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
+++ b/charts/spark-operator-chart/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
@@ -508,6 +508,17 @@ spec:
                       - name
                       - quantity
                       type: object
+                    hostAliases:
+                      items:
+                        properties:
+                          hostnames:
+                            items:
+                              type: string
+                            type: array
+                          ip:
+                            type: string
+                        type: object
+                      type: array
                     hostNetwork:
                       type: boolean
                     image:
@@ -2307,6 +2318,17 @@ spec:
                       - name
                       - quantity
                       type: object
+                    hostAliases:
+                      items:
+                        properties:
+                          hostnames:
+                            items:
+                              type: string
+                            type: array
+                          ip:
+                            type: string
+                        type: object
+                      type: array
                     hostNetwork:
                       type: boolean
                     image:
