#1143 Improve configurability of the webhook-cleanup-job annotations and CRD validation fixes (#1145)
A new version of the helm chart should be released which contains configurable webhook-cleanup-job annotations, as the helm-hook pre-update doesn't work with argocd, and the CRD fixes which are failing validation.

Signed-off-by: Tom Hellier <me@tomhellier.com>

--- a/charts/spark-operator-chart/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
+++ b/charts/spark-operator-chart/crds/sparkoperator.k8s.io_scheduledsparkapplications.yaml
@@ -5,7 +5,6 @@ kind: CustomResourceDefinition
 metadata:
   annotations:
     controller-gen.kubebuilder.io/version: (unknown)
-  creationTimestamp: null
   name: scheduledsparkapplications.sparkoperator.k8s.io
 spec:
   group: sparkoperator.k8s.io
@@ -4364,5 +4363,5 @@ status:
   acceptedNames:
     kind: ""
     plural: ""
-  conditions: null
-  storedVersions: null
+  conditions: []
+  storedVersions: []
