Update values.yaml (#1193)
correct name for pre hook is `pre-upgrade` and not `pre-update` https://helm.sh/docs/topics/charts_hooks/

--- a/charts/spark-operator-chart/values.yaml
+++ b/charts/spark-operator-chart/values.yaml
@@ -71,7 +71,7 @@ webhook:
   namespaceSelector: ""
   # -- The annotations applied to the cleanup job, required for helm lifecycle hooks
   cleanupAnnotations:
-    "helm.sh/hook": pre-delete, pre-update
+    "helm.sh/hook": pre-delete, pre-upgrade
     "helm.sh/hook-delete-policy": hook-succeeded
 
 metrics:
