Updating Spark version from 3.0 to 3.1.1 (#1153)
* Updating Spark version from 3.0 to 3.1

* Adding github actions

* Add configmaps resources into spark-role 

Spark 3.1 needs permission to create ConfigMaps, Pods and services

* Typo fix - Change unit test to unit tests

* Format fix on workflow

* Update main.yaml

* Update main.yaml

* Update Makefile and Bump Chart version

* Bump Chart version to 1.1.0

* Add Chart lint docs

--- a/charts/spark-operator-chart/values.yaml
+++ b/charts/spark-operator-chart/values.yaml
@@ -12,7 +12,7 @@ image:
   # -- Image pull policy
   pullPolicy: IfNotPresent
   # -- Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "latest"
 
 # -- Image pull secrets
 imagePullSecrets: []
