--- a/charts/spark-operator-chart/templates/spark-rbac.yaml
+++ b/charts/spark-operator-chart/templates/spark-rbac.yaml
@@ -19,7 +19,12 @@ rules:
   - services
   verbs:
   - "*"
-
+- apiGroups:
+  - ""
+  resources:
+  - configmaps
+  verbs:
+  - "*"
 ---
 
 apiVersion: rbac.authorization.k8s.io/v1
