[#1239] Custom service port name for spark application UI (#1240)
* [operator] Adding service port name for spark UI exposure

* cleanup

--- a/manifest/crds/sparkoperator.k8s.io_sparkapplications.yaml
+++ b/manifest/crds/sparkoperator.k8s.io_sparkapplications.yaml
@@ -3672,6 +3672,8 @@ spec:
                 servicePort:
                   format: int32
                   type: integer
+                servicePortName:
+                  type: string
                 serviceType:
                   type: string
               type: object
